Alle Aufgaben aus Aufgabe 3 aufgesplittet

--- a/tasks/u10/index.html
+++ b/tasks/u10/index.html
@@ -1,11 +1,14 @@
-<h2>Aufgabe 10.1 - Komponente in Vue.js</h2>
-<h2>Aufgabe 10.2 - Menü-Komponente</h2>
-<h2>Aufgabe 10.3 - Vue.js WWW-Navigator</h2>
+<p>
+    Vue ist ein Framework für die Client-Seitige JavaScript Entwicklung. Neben der Erstellung von reaktiven Webkomponenten bietet es zahlreiche weitere Features wie Page-Router oder <dfn>Single Page Applications</dfn> (SPA) an. Vue zeichnet sich durch einen vergleichsweisen einfachen Einstieg aus und ist vielleicht auch deshalb in den letzten Jahren immer populärer geworden (siehe Abb. 10.1). In dieser Übung werden zwei Webkomponenten mit Vue präsentiert und eine SPA.   
+</p>
 
+<h2>Aufgabe 10.1 - Komponente in Vue.js</h2>
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Eingabe Auswerter</h3>
+        <p>
+            In dieser Aufgabe sollte eine Webkomponente entickelt werden, die primär aus einem Textfeld besteht, dessen Inhalt ausgewertet wird. Dabei soll die Anzahl der Buchsteben, die Anzahel der Leerzeichn sowie die Anzahl an Worten gezählt werden. Sie finden in der Vorschau das Element zwei mal, wodurch gezeigt werden sollte,dass die Komponenten unabhängig voneineander laufen.
+        </p>
     </example-tab>
 
     <example-tab title="Code">
@@ -17,8 +20,40 @@
     </example-tab>
 </example-tabs>
 
+<h2>Aufgabe 10.2 - Menü-Komponente</h2>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Komponente für Menüs in Vue</h3>
+        <p>
+            Um die Komponenten Entwicklung weiter zu treiben, wurde in dieser Aufgabe eine Webkomponente Entwickelt, die ein Menü repräsentiert. Dem Tag kann das Attribut "orientation" übergeben werden um zu entscheiden in welche Richtung das Menü ausgerichtet wird. In der Vorschau sehen Sie beide Varianten.
+        </p>
+    </example-tab>
 
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u10/a2/index.html">index.html</file-viewer>
+    </example-tab>
 
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u10/a2/index.html"></embed-browser>
+    </example-tab>
+</example-tabs>
 
+<h2>Aufgabe 10.3 - Vue.js WWW-Navigator</h2>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>SPA in VUE</h3>
+        <p>
+            Im letzten Teil dieser Übung wurde eine <dfn>Single Page Applications</dfn> (SPA) programmiert, welche den Web-Navigator aus Übung 8.2 erneut aufgreift. Sollten Sie die SPA genauer betrachten wollen, können Sie diese einfach als ZIP herunterladen.
+        </p>
+    </example-tab>
 
-<h2>Aufgabe 10.4 - Integration in die eigene Webseite</h2>
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u10/a3/App.vue">index.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="SPA als Download">
+    <p>Die SPA aus der Übung können Sie hier als ZIP herunterladen</p> <br>
+    <button><a href="/tasks/u10/a3/a3.zip">ZIP herunterladen &#8659;</a></button>
+
+    </example-tab>
+</example-tabs>
