--- a/tasks/u3/index.html
+++ b/tasks/u3/index.html
@@ -1,1 +1,24 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<p>
+    <dfn>Javascript</dfn>
+</p>
+
+<h2>Aufgabe 3.1 - Funktionen in JavaScript</h2>
+
+<h2>Aufgabe 3.2 - Advanced Functional JavaScript Programming</h2>
+
+
+<h3>8.1.1 - Einkaufsliste</h3>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <p>Die Einkaufsliste ermöglicht es, über den "Add item" Button, weitere Elemente in die Liste aufzunehmen.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a1_1.html">a1_1.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a1_1.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
