--- a/tasks/u8/index.html
+++ b/tasks/u8/index.html
@@ -1,10 +1,13 @@
+<p>
+    <dfn>Web-Komponenten</dfn> bieten Entwicklern die Möglichkeit eigene HTML-Tags zu definieren. Damit können eigenen Elemente erstellt werden, die Webseitenübergreifend weiderverwendet werden können. Webdesigner können die entworfenen Komponenten deklarativ in Ihrer Webseite bzw. im Frontend einsetzen und müssen sich keine Gedanken über den Code dahinter machen. 
+</p>
 <h2>Aufgabe 8.1 - Web-Komponenten erstellen</h2>
+<p>In dieser Aufgabe sollten Lösungen aus älteren Aufgaben in Webkomponenten überführt werden.</p>
 
 <h3>8.1.1 - Einkaufsliste</h3>
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <p>Die Einkaufsliste ermöglicht es, über den "Add item" Button, weitere Elemente in die Liste aufzunehmen.</p>
     </example-tab>
 
     <example-tab title="Code">
@@ -19,8 +22,7 @@
 <h3>8.1.2 - Rednerliste</h3>
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <p>Mit der Rednerliste können Redner eingetragen werden. Sobald ein neuer Redner angelegt wurde, beginnt ein Timer, der die Redezeit misst. Wird ein weiterer Redner hinzugefügt, stoppt der Timer des ersten Redner und der des zweiten startet. Weiterhin kann der Timer über eine entsprechende Schaltfläche angehalten und fortgesetzt werden.</p>
     </example-tab>
 
     <example-tab title="Code">
@@ -36,9 +38,8 @@
 
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Einfacher Excel Klon</h3>
         <p>
-            lirum larum
+            Eine einfache Tabellenkalkulation die es ermöglicht einträge in eine Tabelle vorzunehmen und mit der Formel: "sum=1,1:1,2" Berechnungen durchzuführen. Achtung! die zwei Parameter hinter dem Gleichheitszeichen entsprechen den zellenadressen und müssen ggf. für Ihr Beispiel angepasst werden.  
         </p>
     </example-tab>
 
@@ -55,8 +56,9 @@
 
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <p>
+            Diese Webkomponente erhält ein JSON File, welches sie anhand fest definierten Key's in einem Balkendiagramm präsentiert.
+        </p>
     </example-tab>
 
     <example-tab title="Code">
@@ -72,8 +74,9 @@
 
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <p>
+            Diese Animation kann auch jetzt einfach als Webkomponente eingebunden werden.
+        </p>
     </example-tab>
 
     <example-tab title="Code">
@@ -89,8 +92,9 @@
 
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <p>
+            Mit diesem Editor können Sie mit der Maus einen Pfad zeichnen, der jenachdem wie lange Sie auf einer Stelle verweilen etwas dicker oder dünner ausfällt. 
+        </p>
     </example-tab>
 
     <example-tab title="Code">
@@ -105,8 +109,10 @@
 <h2>Aufgabe 8.2 - LitElement Menü-Komponente</h2>
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Erste Schritte mit LIT-Element</h3>
+        <p>
+            In dieser Aufgabe wurde eine Menü-Komponente entwickelt die ein simples Menüband baut und je nach Parameterwahl horizontal oder vertikal ausrichtet.
+        </p>
     </example-tab>
 
     <example-tab title="Code">
@@ -123,3 +129,14 @@
 <strong>TODO</strong>
 
 <h2>Aufgabe 8.4 - Integration in die eigene Webseite</h2>
+<p>
+    In dieser Webseite verstechen sich so einige Web-Komponenten. Hier eine kleine Auflistung der Custom-Elements:
+    <ul class="padding-list">
+        <li><dfn>Datei-Viewer</dfn>: Text/Code Vorschau</li>
+        <li><dfn>Live-Viewer</dfn>: Eingebetete Ansicht von HTML und JS Codes</li>
+        <li><dfn>Reference</dfn>: Zitation im Havard-Stil</li>
+        <li><dfn>TabView</dfn>: Tab Ansicht</li>
+        <li><dfn>Tipping Text</dfn>: Text wird getipp</li>
+        <li><dfn>Task-Card</dfn>: Vorschau für die einzelnen Aufgaben</li>
+    </ul>
+</p>
