--- a/tasks/u10/a1/index.html
+++ b/tasks/u10/a1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de ">
 <head>
-    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
     <script type="module" src="inputValidator.mjs"></script>
     <meta charset="UTF-8">
     <title>VUE</title>
