--- a/tasks/u3/a1.html
+++ b/tasks/u3/a1.html
@@ -13,6 +13,15 @@
 
 
 <script>
+    //Hilfsfunktionen
+    function add(a,b){
+        return a+b;
+    }
+    function mul(a,b){
+        return a*b;
+    }
+
+
     //3.1.1
     function identity_function(a){
         return _=>{return a;}
