--- a/tasks/u12/index.html
+++ b/tasks/u12/index.html
@@ -1,1 +1,23 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 1.3 - Wireframe with HTML and CSS: Tribute Page</h2>
+
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Nachbau eines Wireframes mit HTML und CSS</h3>
+        <p>In dieser Aufgabe sollte ein einfaches Wireframe mit HTML und CSS nachgebildet werden. dafür stand lediglich das Mockup zur verfügung.</p>
+    </example-tab>
+
+    <example-tab title="Mockup">
+        <figure>
+            <img src="WS21-Web-Engineering-Master/tasks/u12/sql_injection/a2.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u1/Abschnitt1.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u1/Abschnitt1.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
