--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -57,17 +57,17 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u1/tribute.png" alt="Error">
+            <img src="tasks/u1/tribute.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u1/Abschnitt1.html">Index File</file-viewer>
+        <file-viewer src="tasks/u1/Abschnitt1.html">Index File</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u1/Abschnitt1.html"></embed-browser>
+        <embed-browser src="tasks/u1/Abschnitt1.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
@@ -82,17 +82,17 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u1/survey.png" alt="Error">
+            <img src="tasks/u1/survey.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u1/a4.html">Index File</file-viewer>
+        <file-viewer src="tasks/u1/a4.html">Index File</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u1/a4.html"></embed-browser>
+        <embed-browser src="tasks/u1/a4.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
@@ -106,17 +106,17 @@
     
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u1/landing.png" alt="Error">
+            <img src="tasks/u1/landing.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u1/a5.html">Index File</file-viewer>
+        <file-viewer src="tasks/u1/a5.html">Index File</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u1/a5.html"></embed-browser>
+        <embed-browser src="tasks/u1/a5.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
